# activity-tracker

./: .dockerignore  Dockerfile  README.md  docker-compose.yml  fly.toml  main.py  pyproject.toml
.github/workflows/: cd.yml  ci.yml
