[project]
name = "activity-tracker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.137.1",
    "python-multipart>=0.0.32",
    "rapidocr-onnxruntime>=1.4.4",
    "uvicorn[standard]>=0.49.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
    "pytest-asyncio>=2.0",
    "httpx>=0.27",
    "ruff>=0.15",
    "ty>=0.0.40",
]
